--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,7 @@
 version: 2.1
 orbs:
-  # "cypress-io/cypress@1" installs the latest published
-  # version "1.x.y" of the orb. We recommend you then use
-  # the strict explicit version "cypress-io/cypress@1.x.y"
-  # to lock the version and prevent unexpected CI changes
   cypress: cypress-io/cypress@1.29.0
 workflows:
   build:
     jobs:
-      - cypress/run  "SECRET_WORDS="write step depend debate evidence ladder pretty involve ribbon sand cute pond" NETWORK_NAME="Ropsten" npm run cy:open"
+      - cypress/run
