--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,10 @@ jobs:
         uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
+     - name: Checkout code
+        uses: actions/checkout@v2.3.4
         with:
+          submodules: recursive
+          token: ${{ secrets.A_SECRET_TOKEN}}
           build: npm run build
           start: npm start
