--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-     - name: Cypress run
-        uses: actions/checkout@v2
+      - name: Cypress Tests
+        uses: cypress-io/github-action@v2
         with:
-          submodules: recursive
-          token: ${{ secrets.A_SECRET_TOKEN}}
           build: npm run build
           start: npm start
