--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cy:run": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome"
   },
   "dependencies": {
+    "14": "^1.0.1",
     "@synthetixio/js": "^2.41.0",
     "@testing-library/cypress": "^8.0.2",
     "axios": "^0.26.1",
@@ -34,7 +35,8 @@
     "bytes32": "0.0.3",
     "cross-zip": "^4.0.0",
     "cypress": "^9.5.3",
-    "cypress-testrail-reporter": "^1.2.2",
+    "cypress-metamask": "^1.0.5-development",
+    "cypress-testrail-reporter": "^1.3.4",
     "cypress-wait-until": "^1.7.2",
     "dotenv": "^16.0.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -44,8 +46,8 @@
     "semantic-release": "^19.0.2",
     "standard": "^16.0.3",
     "start-server-and-test": "^1.12.2",
-    "superstatic": "^7.1.0",
-    "synthetix-js": "^2.66.0",
+    "superstatic": "^0.12.10",
+    "synthetix-js": "^2.4.1",
     "yarn": "^1.22.18"
   },
   "repository": {
