--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-cypress-metamask-v2",
+  "name": "re-cypress-metamask-v2",
   "version": "1.6.10",
   "main": "cypress/support/commands.js",
   "license": "MIT",
@@ -22,21 +22,22 @@
     ]
   },
   "scripts": {
+    "start:server": "serve node_modules/@metamask/test-dapp/dist -p 3000",
     "cy:dashboard": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --record --key 841c573a-dbe5-4194-b42b-d35713bae690",
     "cy:open": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open",
     "cy:run": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome"
   },
   "dependencies": {
-    "14": "^1.0.1",
     "@synthetixio/js": "^2.41.0",
+    "@synthetixio/synpress": "^3.0.4",
     "@testing-library/cypress": "^8.0.2",
     "axios": "^0.26.1",
     "browserslist": "^4.20.3",
     "bytes32": "0.0.3",
+    "core-js": "^3.24.1",
     "cross-zip": "^4.0.0",
     "cypress": "^9.5.3",
-    "cypress-metamask": "^1.0.5-development",
-    "cypress-testrail-reporter": "^1.3.4",
+    "cypress-testrail-reporter": "^1.2.3",
     "cypress-wait-until": "^1.7.2",
     "dotenv": "^16.0.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -44,10 +45,12 @@
     "node-fetch": "^2.6.1",
     "puppeteer-core": "^13.5.2",
     "semantic-release": "^19.0.2",
+    "server": "file:server",
     "standard": "^16.0.3",
     "start-server-and-test": "^1.12.2",
     "superstatic": "^0.12.10",
     "synthetix-js": "^2.4.1",
+    "typescript": "^4.9.3",
     "yarn": "^1.22.18"
   },
   "repository": {
