--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ethers": "^5.1.4",
     "n": "^9.0.1",
     "node-fetch": "^2.6.1",
+    "playwright": "^1.28.0",
     "serve": "^14.0.1",
     "stable": "^0.1.8",
     "start-server-and-test": "^1.14.0",
