--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.2.0",
     "bytes32": "0.0.3",
     "cypress": "^10.11.0",
+    "cypress-metamask-v2": "^1.7.2",
     "cypress-wait-until": "^1.7.2",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
