--- a/package.json
+++ b/package.json
@@ -28,32 +28,28 @@
     "cy:run": "CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome"
   },
   "dependencies": {
-    "@playwright/test": "^1.27.1",
     "@synthetixio/js": "^2.41.0",
     "@testing-library/cypress": "^8.0.2",
-    "axios": "^1.2.0",
+    "axios": "^1.1.2",
     "bytes32": "0.0.3",
-    "cypress": "^10.11.0",
-    "cypress-metamask-v2": "^1.7.2",
-    "cypress-wait-until": "^1.7.2",
-    "debug": "^4.3.4",
+    "cypress": "^10.10.0",
     "dotenv": "^16.0.3",
     "dotenv-parse-variables": "^2.0.0",
-    "download": "^3.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "ethers": "^5.1.4",
-    "n": "^9.0.1",
     "node-fetch": "^2.6.1",
-    "playwright": "^1.28.0",
-    "serve": "^14.0.1",
-    "stable": "^0.1.8",
     "start-server-and-test": "^1.14.0",
-    "synthetix-js": "^2.4.1"
+    "synthetix-js": "^2.74.1",
+    "cypress-wait-until": "^1.7.2",
+    "@playwright/test": "^1.27.1",
+    "download": "^8.0.0",
+    "debug": "^4.3.4",
+    "serve": "^14.0.1"
   },
   "devDependencies": {
     "@metamask/test-dapp": "^5.2.1",
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
-    "npm-check-updates": "^16.4.2",
+    "npm-check-updates": "^16.3.11",
     "release-it": "^15.5.0"
   },
   "repository": {
